=== Alexandria 0.1.1 ===

2004-04-12  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb:

	Creates ~/.alexandria if it doesn't exist.

=== Alexandria 0.1.0 ===

2004-04-12  Laurent Sansonetti  <lrz@gnome.org>

	* NEWS:
	
	New file.

	* README,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb:

	Fixed the spelling of some strings.

	* bin/alexandria:

	Added some code to help users report bugs.

2004-04-11  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	- Fixed the length of icons titles to 20 instead of 15 ;
	- Changes the title of the main window according to the
	  selected library.

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	Sets the history of the option menu in the toolbar (View as...)
	each time the view is changed.

	* lib/alexandria/book.rb:

	Fixed a bug introduced in the latest commit entry. 

2004-04-08  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb:

	Rescues the TimerError exception raised by Ruby/Amazon (when
	it could not reach amazon.com), and displays a meaningful
	error dialog box.

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	Auto-sensitize File/Properties and Edit/Delete according to
	the current focus.

2004-04-07  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb,
	  lib/alexandria/ui/main_app.rb:

	Implemented the possibility to delete a library.

2004-04-06  Laurent Sansonetti  <lrz@gnome.org>
	
	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Displays an error dialog when the user picks a new name for a 
	  library which contains at least one illegal character ;

	- Automatically show the sidepane upon "New Library", because it
	  may be hidden ;

	- Fixed a bug in the random name chooser (for "New Library") ; 

	- Displays an error dialog when the user tries to add a book