@@ -1,3 +1,13 @@
+2004-04-15  Laurent Sansonetti  <lrz@gnome.org>
+
+	* lib/alexandria/book.rb:
+
+	Ported to the latest Ruby/Amazon release (0.8.1).
+
+	* README:
+
+	Alexandria now requires Ruby/Amazon 0.8.1 or newer.
+
 === Alexandria 0.1.1 ===
 
 2004-04-12  Laurent Sansonetti  <lrz@gnome.org>
